syntax = "proto3";

option go_package = "./helloService";

message HelloReq {
  string name = 1;
}

message HelloRes {
  string msg = 1;
}

service Hello {
  rpc SayHello(HelloReq) returns (HelloRes);
}